# tada

./: README.md  demo.py  pyproject.toml
tada/modules/: acoustic_spkr_verf.py  aligner.py  decoder.py  encoder.py  tada.py
tada/nn/: vibevoice.py
